# src/swagger/models/index.ts
@@ -37,6 +37,7 @@ export * from './CreateTanChallengeParams';
 export * from './CreateTradeResponse';
 export * from './CreatedResponseBody';
 export * from './DecoupledOperationState';
+export * from './DecoupledOperationStatus';
 export * from './DefaultOrderValidityByOrderModel';
 export * from './DemoAccount';
 export * from './DemoAccountsResponse';
@@ -125,6 +126,7 @@ export * from './PreparedTrade';
 export * from './QuoteExpiration';
 export * from './RiskClassInfo';
 export * from './Security';
+export * from './SecurityDetailedInfo';
 export * from './SecurityNotAvailableForTrading';
 export * from './SellPosition';
 export * from './Session';
